--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -67,12 +67,21 @@ single_version_override(
     version = "2.39.3.bcr.1",
 )
 
+bazel_dep(name = "glib")
+single_version_override(
+    module_name = "glib",
+    patch_strip = 1,
+    patches = [
+        "//third_party/glib/patches:musl-compat.patch",
+    ],
+    version = "2.82.2.bcr.5",
+)
+
 bazel_dep(name = "zstd", version = "1.5.7")
 bazel_dep(name = "gperf", version = "3.1")
 bazel_dep(name = "zlib", version = "1.3.1.bcr.6")
 bazel_dep(name = "boringssl", version = "0.20250514.0")
 bazel_dep(name = "libcap", version = "2.27")
-bazel_dep(name = "glib", version = "2.82.2.bcr.5")
 bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")
 bazel_dep(name = "bazel_skylib", version = "1.7.1")
 bazel_dep(name = "rules_pkg", version = "1.1.0")
