--- a/metropolis/test/launch/BUILD.bazel
+++ b/metropolis/test/launch/BUILD.bazel
@@ -13,7 +13,8 @@ go_library(
     ],
     data = [
         "//metropolis/cli/metroctl:metroctl_lite",
-        "//metropolis/node:image",
+        "//metropolis/node:oci_image_uncompressed",
+        "//metropolis/node/abloader",
         "//metropolis/test/nanoswitch:initramfs",
         "//metropolis/test/swtpm/certtool",
         "//metropolis/test/swtpm/swtpm_cert",
@@ -37,11 +38,11 @@ go_library(
         "xOvmfCodePath": "$(rlocationpath //third_party/edk2:OVMF_CODE.fd )",
         "xKernelPath": "$(rlocationpath //osbase/test/ktest:linux-testing )",
         "xInitramfsPath": "$(rlocationpath //metropolis/test/nanoswitch:initramfs )",
-        "xNodeImagePath": "$(rlocationpath //metropolis/node:image )",
+        "xNodeImagePath": "$(rlocationpath //metropolis/node:oci_image_uncompressed )",
+        "xAbloaderPath": "$(rlocationpath //metropolis/node/abloader )",
     },
     deps = [
         "//go/logging",
-        "//go/qcow2",
         "//metropolis/cli/metroctl/core",
         "//metropolis/node",
         "//metropolis/node/core/curator/proto/api",
@@ -49,8 +50,13 @@ go_library(
         "//metropolis/node/core/rpc/resolver",
         "//metropolis/proto/api",
         "//metropolis/proto/common",
+        "//osbase/blockdev",
+        "//osbase/build/mkimage/osimage",
         "//osbase/logbuffer",
+        "//osbase/oci",
+        "//osbase/oci/osimage",
         "//osbase/oci/registry",
+        "//osbase/structfs",
         "//osbase/test/qemu",
         "@com_github_cenkalti_backoff_v4//:backoff",
         "@com_github_kballard_go_shellquote//:go-shellquote",
