tools: make bazel-vscode plugin work in the monorepo
Set Bazel executable and remove stdout pollution.

Change-Id: I2d1d7fb613e7e7a55d34c3e33b7a9e204e866879
Reviewed-on: https://review.monogon.dev/c/monogon/+/4308
Tested-by: Jenkins CI
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,5 +22,6 @@
         "bazel-${workspaceFolderBasename}/**": true,
         "bazel-testlogs/**": true,
         ".bazeldnf/**": true,
-    }
+    },
+    "bazel.executable": "tools/bazel"
 }
