--- a/.github/workflows/todo.yml
+++ b/.github/workflows/todo.yml
@@ -1,11 +1,22 @@
 name: "Run TODO to Issue"
-on: [ "push" ]
+on:
+  push:
+  workflow_dispatch:
+    inputs:
+      MANUAL_COMMIT_REF:
+        description: "The SHA of the commit to get the diff for"
+        required: true
+      MANUAL_BASE_REF:
+        description: "By default, the commit entered above is compared to the one directly before it; to go back further, enter an earlier SHA here"
+        required: false
 jobs:
   build:
     runs-on: "ubuntu-latest"
-    permissions:
-      issues: write
     steps:
       - uses: "actions/checkout@v4"
       - name: "TODO to Issue"
         uses: "alstr/todo-to-issue-action@v5"
+        env:
+          MANUAL_COMMIT_REF: ${{ inputs.MANUAL_COMMIT_REF }}
+          MANUAL_BASE_REF: ${{ inputs.MANUAL_BASE_REF }}
+          INPUT_IGNORE: "MODULE\.bazel\.lock"
